--- a/front/src/app/components/private/user/components/user-info/components/financial-info/financial-info.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/financial-info/financial-info.component.html
@@ -132,8 +132,8 @@
             currency="COP" 
             locale="es-CO" />
     </div>
-    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <button class="btn btn-primary me-md-2" [disabled]="financialForm.invalid" type="submit">Guardar</button>
+    <div class="d-grid gap-2">
+      <button class="btn btn-primary" [disabled]="financialForm.invalid" type="submit">Guardar Información Financiera</button>
     </div>
   </div>
 </form>
