--- a/front/src/app/components/private/admin/components/saving-withdrawal-request/saving-withdrawal-request.component.html
+++ b/front/src/app/components/private/admin/components/saving-withdrawal-request/saving-withdrawal-request.component.html
@@ -1,20 +1,59 @@
 <div class="container mt-5">
   <h1 class="mb-3">Solicitudes de Retiro de Ahorro</h1>
-  <div class="table-responsive">
-    <table class="table table-striped table-bordered" *ngIf="savingWdRequests.length > 0; else noRequestsMessage">
-      <thead>
+
+  <div class="card">
+    <p-table
+      #dt2
+      [value]="savingWdRequests"
+      styleClass="p-datatable-striped"
+      [paginator]="true"
+      [rows]="rows"
+      [totalRecords]="totalRecords"
+      [loading]="loading"
+      [lazy]="true"
+      (onLazyLoad)="
+        loadSavingWdRequests(
+          ($event.first ?? 0) / ($event.rows ?? 10) + 1,
+          $event.rows ?? 10
+        )
+      "
+      [rowsPerPageOptions]="[10, 25, 50]"
+      [globalFilterFields]="[
+        'numeroDocumento',
+        'primerApellido',
+        'segundoNombre',
+        'primerNombre'
+      ]"
+      [tableStyle]="{ 'min-width': '75rem' }"
+    >
+      <ng-template pTemplate="caption">
+        <div class="flex">
+          <p-iconField iconPosition="left" class="ml-auto">
+            <p-inputIcon>
+              <i class="pi pi-search"></i>
+            </p-inputIcon>
+            <input
+              pInputText
+              type="text"
+              (input)="onFilterGlobal($event)"
+              placeholder="Buscar palabra clave"
+            />
+          </p-iconField>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="header">
         <tr>
-          <th scope="col">Id</th>
-          <th scope="col">Número Documento</th>
-          <th scope="col">Nombre Completo</th>
-          <th scope="col">Línea Ahorro</th>
-          <th scope="col">Monto a Retirar</th>
-          <th scope="col">Fecha Solicitud</th>
-          <th scope="col">Acciones</th>
+          <th style="width: 10%">No.</th>
+          <th style="width: 10%">No. Documento</th>
+          <th style="width: 15%">Nombre Completo</th>
+          <th style="width: 15%">Línea de Ahorro</th>
+          <th style="width: 15%">Monto a Retirar</th>
+          <th style="width: 15%">Fecha de Solicitud</th>
+          <th style="width: 20%">Acciones</th>
         </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let request of savingWdRequests">
+      </ng-template>
+      <ng-template pTemplate="body" let-request>
+        <tr>
           <td>{{ request.id }}</td>
           <td>{{ request.numeroDocumento }}</td>
           <td>{{ request.nombreAsociado }}</td>
@@ -28,49 +67,14 @@
             ></app-generate-saving-withdrawal-request>
           </td>
         </tr>
-      </tbody>
-    </table>
-    <ng-template #noRequestsMessage>
-      <div class="alert alert-info" role="alert">
-        No hay solicitudes de retiro de ahorro disponibles.
-      </div>
-    </ng-template>
+      </ng-template>
+      <ng-template pTemplate="emptymessage">
+        <tr>
+          <td colspan="5">
+            No se encontraron solicitudes de retiro de ahorros.
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
   </div>
-  
-  <nav aria-label="Page navigation example" *ngIf="totalRecords > rows">
-    <ul class="pagination justify-content-center">
-      <li class="page-item" [class.disabled]="currentPage === 1">
-        <a
-          class="page-link"
-          (click)="onPageChange(currentPage - 1)"
-          aria-label="Previous"
-          style="cursor: pointer"
-        >
-          <span aria-hidden="true">&laquo;</span>
-        </a>
-      </li>
-      <li
-        class="page-item"
-        *ngFor="let page of pages"
-        [class.active]="currentPage === page"
-      >
-        <a
-          class="page-link"
-          (click)="onPageChange(page)"
-          style="cursor: pointer"
-          >{{ page }}</a
-        >
-      </li>
-      <li class="page-item" [class.disabled]="currentPage === totalPages">
-        <a
-          class="page-link"
-          (click)="onPageChange(currentPage + 1)"
-          aria-label="Next"
-          style="cursor: pointer"
-        >
-          <span aria-hidden="true">&raquo;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
 </div>
