--- a/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
+++ b/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
@@ -18,10 +18,15 @@
       "
       [rowsPerPageOptions]="[10, 25, 50]"
       [globalFilterFields]="[
+        'id',
         'numeroDocumento',
-        'primerApellido',
-        'segundoNombre',
-        'primerNombre'
+        'nombreAsociado',
+        'montoSolicitado',
+        'plazoQuincenal',
+        'valorCuotaQuincenal',
+        'nombreLineaCredito',
+        'tasaInteres',
+        'fechaSolicitud',
       ]"
       [tableStyle]="{ 'min-width': '75rem' }"
     >
@@ -42,13 +47,14 @@
       </ng-template>
       <ng-template pTemplate="header">
         <tr>
-          <th style="width: 10%">No.</th>
-          <th style="width: 15%">No. Documento</th>
+          <th style="width: 5%">No.</th>
+          <th style="width: 10%">No. Documento</th>
+          <th style="width: 15%">Nombre Completo</th>
           <th style="width: 15%">Monto Solicitado</th>
-          <th style="width: 15%">Plazo Quincenal</th>
-          <th style="width: 15%">Valor Cuota Quincenal</th>
+          <th style="width: 5%">Plazo Quincenal</th>
+          <th style="width: 10%">Valor Cuota Quincenal</th>
           <th style="width: 20%">Linea de Crédito</th>
-          <th style="width: 20%">Tasa de Interés</th>
+          <th style="width: 5%">Tasa de Interés(%)</th>
           <th style="width: 20%">Fecha de Solicitud</th>
           <th style="width: 20%">Acciones</th>
         </tr>
@@ -57,10 +63,11 @@
         <tr>
           <td>{{ creditRequest.id }}</td>
           <td>{{ creditRequest.numeroDocumento }}</td>
+          <td>{{ creditRequest.nombreAsociado }}</td>
           <td>{{ creditRequest.montoSolicitado }}</td>
           <td>{{ creditRequest.plazoQuincenal }}</td>
           <td>{{ creditRequest.valorCuotaQuincenal }}</td>
-          <td>{{ creditRequest.idLineaCredito }}</td>
+          <td>{{ creditRequest.nombreLineaCredito }}</td>
           <td>{{ creditRequest.tasaInteres }}</td>
           <td>{{ creditRequest.fechaSolicitud | date : "dd/MM/yyyy" }}</td>
           <td>
