--- a/front/src/app/components/private/admin/components/saving-requests/saving-requests.component.html
+++ b/front/src/app/components/private/admin/components/saving-requests/saving-requests.component.html
@@ -44,11 +44,12 @@
       </ng-template>
       <ng-template pTemplate="header">
         <tr>
-          <th style="width: 10%">No.</th>
+          <th style="width: 5%">No.</th>
           <th style="width: 10%">No. Documento</th>
+          <th style="width: 20%">Nombre Completo</th>
           <th style="width: 15%">Monto Total Ahorrar</th>
-          <th style="width: 15%">Quincena</th>
-          <th style="width: 15%">Mes</th>
+          <th style="width: 10%">Quincena</th>
+          <th style="width: 10%">Mes</th>
           <th style="width: 15%">Fecha de Solicitud</th>
           <th style="width: 20%">Acciones</th>
         </tr>
@@ -57,6 +58,7 @@
         <tr>
           <td>{{ savingRequest.id }}</td>
           <td>{{ savingRequest.numeroDocumento }}</td>
+          <td>{{ savingRequest.nombreAsociado }}</td>
           <td>{{ savingRequest.montoTotalAhorrar }}</td>
           <td>{{ savingRequest.quincena }}</td>
           <td>{{ savingRequest.mes }}</td>
