--- a/front/src/app/components/private/user/components/user-info/components/financial-info/financial-info.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/financial-info/financial-info.component.html
@@ -50,7 +50,7 @@
     </div>
     <div class="col-md-6">
       <label for="conceptoOtrosIngresosMens" class="form-label">Concepto de Otros Ingresos Mensuales</label>
-      <input formControlName="conceptoOtrosIngresosMens" type="text" class="form-control" />
+      <input placeholder="Solo si tiene otros ingresos" formControlName="conceptoOtrosIngresosMens" type="text" class="form-control" />
     </div>
     <div class="col-md-6">
       <label for="totalIngresosMensuales" class="form-label">Total de Ingresos Mensuales</label>
