--- a/front/src/app/components/private/user/request/request-credit/request-credit.component.html
+++ b/front/src/app/components/private/user/request/request-credit/request-credit.component.html
@@ -1,11 +1,18 @@
 <p-toast></p-toast>
   <h5 class="mt-3">Solicitud de Crédito</h5>
-  <div class="alert alert-warning" role="alert" *ngIf="displayMessage">
-    <strong>{{ displayMessage }}</strong>. De no hacerlo, no podrá completar la solicitud de crédito, ya que esta información es fundamental para el estudio de su solicitud.
+  <div class="alert alert-warning" role="alert" *ngIf="displayMessageNatPerson">
+    <strong>{{ displayMessageNatPerson }}</strong>. De no hacerlo, no podrá completar la solicitud de crédito, ya que esta información es fundamental para el estudio de su solicitud.
+  </div>
+  <div class="alert alert-warning" role="alert" *ngIf="displayMessageFinancialInfo">
+    <strong>{{ displayMessageFinancialInfo }}</strong>. De no hacerlo, no podrá completar la solicitud de crédito, ya que esta información es fundamental para el estudio de su solicitud.
+  </div>
+  <div class="alert alert-warning" role="alert" *ngIf="displayMessagePersonalRecommend">
+    <strong>{{ displayMessagePersonalRecommend }}</strong>. De no hacerlo, no podrá completar la solicitud de crédito, ya que esta información es fundamental para el estudio de su solicitud.
+  </div>
+  <div class="alert alert-warning" role="alert" *ngIf="displayMessageFamRecommend">
+    <strong>{{ displayMessageFamRecommend }}</strong>. De no hacerlo, no podrá completar la solicitud de crédito, ya que esta información es fundamental para el estudio de su solicitud.
   </div>
   
-
-  <p *ngIf="displayMessage">{{ displayMessage }}</p>
   <div class="card mb-5">
     <div class="card-body">
       <form class="row g-3" [formGroup]="creditForm" (ngSubmit)="onSubmit()" [attr.disabled]="isAdditionalDisabled ? true : null">
