--- a/front/src/app/components/private/user/request/request-saving-withdrawal/request-saving-withdrawal.component.css
+++ b/front/src/app/components/private/user/request/request-saving-withdrawal/request-saving-withdrawal.component.css
@@ -1,10 +1,10 @@
-h1 {
+h1, h5 {
     color: #00823d;
     font-weight: bold;
 }
 
 .custom-input {
     width: 100%;
-    height: 38px; /* Altura estándar para inputs de Bootstrap */
+    height: 38px;
     box-sizing: border-box;
 }
