--- a/front/src/app/components/private/user/request/request-saving/request-saving.component.html
+++ b/front/src/app/components/private/user/request/request-saving/request-saving.component.html
@@ -1,73 +1,157 @@
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
   <p-toast></p-toast>
-  <h2>Solicitud de Ahorro</h2>
-  <form [formGroup]="savingsForm" (ngSubmit)="onSubmit()">
-    <div class="mb-3">
-      <label for="totalSavingsAmount" class="form-label">Monto Total de Ahorro</label>
-      <input
-        type="text"
-        class="form-control"
-        id="totalSavingsAmount"
-        formControlName="totalSavingsAmount"
-        [value]="savingsForm.get('totalSavingsAmount')?.value | currencyFormat"
-        (input)="onTotalSavingsAmountInput($event)"
-      />
-      <div *ngIf="savingsForm.get('totalSavingsAmount')?.invalid && (savingsForm.get('totalSavingsAmount')?.dirty || savingsForm.get('totalSavingsAmount')?.touched)" class="text-danger">
-        <div *ngIf="savingsForm.get('totalSavingsAmount')?.errors?.['required']">Este campo es requerido.</div>
-        <div *ngIf="savingsForm.get('totalSavingsAmount')?.errors?.['min']">El monto debe ser mayor a 0.</div>
-        <div *ngIf="savingsForm.get('totalSavingsAmount')?.errors?.['max']">El monto no puede exceder de {{ maxSavingsAmount | currencyFormat }}.</div>
-      </div>
+  <h1>Solicitud de Ahorros</h1>
+  <p>Este es el módulo de solicitud de ahorro. Primero, complete o actualice su información según sea necesario. Después de hacerlo, proceda a solicitar el ahorro.</p>
+  <p>Para solicitar un ahorro, primero asegúrese de presionar el botón de "Guardar" si ha realizado alguna edición o actualización en cualquier campo. Esto es importante porque la información actualizada será utilizada para el estudio de su solicitud de ahorro. Luego, proceda a solicitar el ahorro.</p>
+  <app-info-request-saving></app-info-request-saving>
+  <h5 class="mt-3">Información Financiera</h5>
+  <div class="card">
+    <div class="card-body">
+      <app-financial-info></app-financial-info>
     </div>
-
-    <div class="mb-3">
-      <label for="fortnight" class="form-label">Quincena</label>
-      <select class="form-control" id="fortnight" formControlName="fortnight">
-        <option value="" disabled selected>Seleccione una quincena</option>
-        <option value="Primera">Primera Quincena</option>
-        <option value="Segunda">Segunda Quincena</option>
-      </select>
-      <div *ngIf="savingsForm.get('fortnight')?.invalid && (savingsForm.get('fortnight')?.dirty || savingsForm.get('fortnight')?.touched)" class="text-danger">
-        <div *ngIf="savingsForm.get('fortnight')?.errors?.['required']">Este campo es requerido.</div>
-      </div>
-    </div>
-
-    <div class="mb-3">
-      <label for="month" class="form-label">Mes</label>
-      <select class="form-control" id="month" formControlName="month">
-        <option value="" disabled selected>Seleccione un mes</option>
-        <option value="Enero">Enero</option>
-        <option value="Febrero">Febrero</option>
-        <option value="Marzo">Marzo</option>
-        <option value="Abril">Abril</option>
-        <option value="Mayo">Mayo</option>
-        <option value="Junio">Junio</option>
-        <option value="Julio">Julio</option>
-        <option value="Agosto">Agosto</option>
-        <option value="Septiembre">Septiembre</option>
-        <option value="Octubre">Octubre</option>
-        <option value="Noviembre">Noviembre</option>
-        <option value="Diciembre">Diciembre</option>
-      </select>
-      <div *ngIf="savingsForm.get('month')?.invalid && (savingsForm.get('month')?.dirty || savingsForm.get('month')?.touched)" class="text-danger">
-        <div *ngIf="savingsForm.get('month')?.errors?.['required']">Este campo es requerido.</div>
-      </div>
-    </div>
-
-    <div class="mb-3">
-      <label for="savingLines" class="form-label">Líneas de Ahorro</label>
-      <div formArrayName="lines">
-        <div *ngFor="let line of lines.controls; let i = index" [formGroupName]="i" class="d-flex align-items-center mb-2">
-          <div class="form-check flex-grow-1 w-50">
-            <input class="form-check-input me-2" type="checkbox" formControlName="selected" (change)="onLineSelected(i)" style="transform: scale(1.5);">
-            <label class="form-check-label">
-              {{ lines.at(i).get('nombre')?.value }}
-            </label>
+  </div>
+  
+  <h5 class="mt-3">Información de Solicitud de Ahorros</h5>
+  <div class="alert alert-warning" role="alert" *ngIf="displayMessageNatPerson">
+    <strong>{{ displayMessageNatPerson }}</strong>. De no hacerlo, no podrá completar la solicitud de crédito, ya que esta información es fundamental para el estudio de su solicitud.
+  </div>
+  <div class="alert alert-warning" role="alert" *ngIf="displayMessageFinancialInfo">
+    <strong>{{ displayMessageFinancialInfo }}</strong>. De no hacerlo, no podrá completar la solicitud de crédito, ya que esta información es fundamental para el estudio de su solicitud.
+  </div>
+  <div class="card">
+    <div class="card-body">
+      <form [formGroup]="savingsForm" (ngSubmit)="onSubmit()" [attr.disabled]="isAdditionalDisabled ? true : null">
+        <div class="mb-3">
+          <label for="totalSavingsAmount" class="form-label"
+            >Monto Total de Ahorro</label
+          >
+          <input
+            type="text"
+            class="form-control"
+            id="totalSavingsAmount"
+            formControlName="totalSavingsAmount"
+            [value]="
+              savingsForm.get('totalSavingsAmount')?.value | currencyFormat
+            "
+            (input)="onTotalSavingsAmountInput($event)"
+          />
+          <div
+            *ngIf="
+              savingsForm.get('totalSavingsAmount')?.invalid &&
+              (savingsForm.get('totalSavingsAmount')?.dirty ||
+                savingsForm.get('totalSavingsAmount')?.touched)
+            "
+            class="text-danger"
+          >
+            <div
+              *ngIf="savingsForm.get('totalSavingsAmount')?.errors?.['required']"
+            >
+              Este campo es requerido.
+            </div>
+            <div *ngIf="savingsForm.get('totalSavingsAmount')?.errors?.['min']">
+              El monto debe ser mayor a 0.
+            </div>
+            <div *ngIf="savingsForm.get('totalSavingsAmount')?.errors?.['max']">
+              El monto no puede exceder de
+              {{ maxSavingsAmount | currencyFormat }}.
+            </div>
           </div>
-          <input type="text" class="form-control w-50" formControlName="montoAhorrar" (input)="onMontoAhorrarInput($event, i)">
         </div>
-      </div>
-    </div>
 
-    <button type="submit" class="btn btn-primary" [disabled]="savingsForm.invalid">Enviar Solicitud</button>
-  </form>
+        <div class="mb-3">
+          <label for="fortnight" class="form-label">Quincena</label>
+          <select
+            class="form-select"
+            id="fortnight"
+            formControlName="fortnight"
+          >
+            <option value="" disabled selected>Seleccione una quincena</option>
+            <option value="Primera">Primera Quincena</option>
+            <option value="Segunda">Segunda Quincena</option>
+          </select>
+          <div
+            *ngIf="
+              savingsForm.get('fortnight')?.invalid &&
+              (savingsForm.get('fortnight')?.dirty ||
+                savingsForm.get('fortnight')?.touched)
+            "
+            class="text-danger"
+          >
+            <div *ngIf="savingsForm.get('fortnight')?.errors?.['required']">
+              Este campo es requerido.
+            </div>
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <label for="month" class="form-label">Mes</label>
+          <select class="form-select" id="month" formControlName="month">
+            <option value="" disabled selected>Seleccione un mes</option>
+            <option value="Enero">Enero</option>
+            <option value="Febrero">Febrero</option>
+            <option value="Marzo">Marzo</option>
+            <option value="Abril">Abril</option>
+            <option value="Mayo">Mayo</option>
+            <option value="Junio">Junio</option>
+            <option value="Julio">Julio</option>
+            <option value="Agosto">Agosto</option>
+            <option value="Septiembre">Septiembre</option>
+            <option value="Octubre">Octubre</option>
+            <option value="Noviembre">Noviembre</option>
+            <option value="Diciembre">Diciembre</option>
+          </select>
+          <div
+            *ngIf="
+              savingsForm.get('month')?.invalid &&
+              (savingsForm.get('month')?.dirty ||
+                savingsForm.get('month')?.touched)
+            "
+            class="text-danger"
+          >
+            <div *ngIf="savingsForm.get('month')?.errors?.['required']">
+              Este campo es requerido.
+            </div>
+          </div>
+        </div>
+
+        <div class="mb-3">
+          <label for="savingLines" class="form-label">Líneas de Ahorro</label>
+          <div formArrayName="lines">
+            <div
+              *ngFor="let line of lines.controls; let i = index"
+              [formGroupName]="i"
+              class="d-flex align-items-center mb-2"
+            >
+              <div class="form-check flex-grow-1 w-50">
+                <input
+                  class="form-check-input me-2"
+                  type="checkbox"
+                  formControlName="selected"
+                  (change)="onLineSelected(i)"
+                  style="transform: scale(1.5)"
+                />
+                <label class="form-check-label">
+                  {{ lines.at(i).get("nombre")?.value }}
+                </label>
+              </div>
+              <input
+                type="text"
+                class="form-control w-50"
+                formControlName="montoAhorrar"
+                (input)="onMontoAhorrarInput($event, i)"
+              />
+            </div>
+          </div>
+        </div>
+
+        <button
+          type="submit"
+          class="btn btn-primary"
+          [disabled]="savingsForm.invalid || isAdditionalDisabled"
+        >
+          Enviar Solicitud
+        </button>
+      </form>
+    </div>
+  </div>
 </div>
