--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
         <li class="mb-1" *ngIf="userRole === 1">
           <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
             data-bs-toggle="collapse" data-bs-target="#admin-credits-collapse" aria-expanded="false">
-            Servicios de Crédito
+            Créditos
           </button>
           <div class="collapse" id="admin-credits-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -36,7 +36,7 @@
         <li class="mb-1" *ngIf="userRole === 1">
           <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
             data-bs-toggle="collapse" data-bs-target="#admin-savings-collapse" aria-expanded="false">
-            Servicios de Ahorro
+            Ahorros
           </button>
           <div class="collapse" id="admin-savings-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
@@ -60,6 +60,18 @@
                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">Subir informes</a></li>
               <li><a routerLink="/auth/admin/download"
                 class="link-body-emphasis d-inline-flex text-decoration-none rounded">Descargar informes</a></li>
+            </ul>
+          </div>
+        </li>
+        <li class="mb-1" *ngIf="userRole === 1">
+          <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+            data-bs-toggle="collapse" data-bs-target="#admin-users-collapse" aria-expanded="false">
+            Usuarios
+          </button>
+          <div class="collapse" id="admin-users-collapse">
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+              <li><a routerLink="/auth/admin/upload"
+                  class="link-body-emphasis d-inline-flex text-decoration-none rounded">Gestionar usuarios</a></li>
             </ul>
           </div>
         </li>
@@ -183,6 +195,18 @@
               class="link-body-emphasis d-inline-flex text-decoration-none rounded">Subir informes</a></li>
           <li><a routerLink="/auth/admin/download"
             class="link-body-emphasis d-inline-flex text-decoration-none rounded">Descargar informes</a></li>
+        </ul>
+      </div>
+    </li>
+    <li class="mb-1" *ngIf="userRole === 1">
+      <button class="btn btn-toggle d-inline-flex align-items-center rounded border-0 collapsed"
+        data-bs-toggle="collapse" data-bs-target="#admin-users-collapse" aria-expanded="false">
+        Usuarios
+      </button>
+      <div class="collapse" id="admin-users-collapse">
+        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+          <li><a routerLink="/auth/admin/users"
+              class="link-body-emphasis d-inline-flex text-decoration-none rounded">Gestionar usuarios</a></li>
         </ul>
       </div>
     </li>
