Update routes in sidebar

--- a/front/src/app/components/private/components/sidebar/sidebar.component.html
+++ b/front/src/app/components/private/components/sidebar/sidebar.component.html
@@ -70,8 +70,12 @@
           </button>
           <div class="collapse" id="admin-users-collapse">
             <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-              <li><a routerLink="/auth/admin/upload"
+              <li><a routerLink="/auth/admin/manage/user"
                   class="link-body-emphasis d-inline-flex text-decoration-none rounded">Gestionar usuarios</a></li>
+              <li><a routerLink="/auth/admin/manage/administrator"
+                class="link-body-emphasis d-inline-flex text-decoration-none rounded">Gestionar Administradores</a></li>
+              <li><a routerLink="/auth/admin/manage/executive"
+                class="link-body-emphasis d-inline-flex text-decoration-none rounded">Gestionar Directivos</a></li>
             </ul>
           </div>
         </li>
@@ -205,8 +209,12 @@
       </button>
       <div class="collapse" id="admin-users-collapse">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-          <li><a routerLink="/auth/admin/users"
-              class="link-body-emphasis d-inline-flex text-decoration-none rounded">Gestionar usuarios</a></li>
+          <li><a routerLink="/auth/admin/manage/user"
+            class="link-body-emphasis d-inline-flex text-decoration-none rounded">Gestionar usuarios</a></li>
+          <li><a routerLink="/auth/admin/manage/administrator"
+            class="link-body-emphasis d-inline-flex text-decoration-none rounded">Gestionar Administradores</a></li>
+          <li><a routerLink="/auth/admin/manage/executive"
+            class="link-body-emphasis d-inline-flex text-decoration-none rounded">Gestionar Directivos</a></li>
         </ul>
       </div>
     </li>
