Add cards to admin welcome page

--- a/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.html
+++ b/front/src/app/components/private/admin/components/admin-welcome/admin-welcome.component.html
@@ -2,7 +2,7 @@
     <h1 class="title-color mt-5">¡Bienvenido a FemSeapto!</h1>
 </div>
 
-<div class="container mt-2 content-animate">
+<div class="container mt-2 mb-5 content-animate">
     <div class="row">
 
         <!-- Card de Servicios de Crédito -->
@@ -26,6 +26,43 @@
                 <div class="card-body d-flex justify-content-center align-items-center">
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/savings">Ver solicitudes de ahorro</a>
                     <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/savings-withdrawals">Ver solicitudes de retiro ahorro</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Card de Informes -->
+        <div class="col-lg-6 col-md-6 col-sm-6 col-12 mb-3">
+            <div class="card shadow h-100">
+                <h4 class="card-header text-center">
+                    Informes, Actas de Junta y Comité
+                </h4>
+                <div class="card-body d-flex justify-content-center align-items-center">
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/upload">Subir Informes</a>
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/download">Descargar Informes</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Card de Gestión de Usuarios -->
+        <div class="col-lg-6 col-md-6 col-sm-6 col-12 mb-3">
+            <div class="card shadow h-100">
+                <h4 class="card-header text-center">
+                    Gestión de Usuarios
+                </h4>
+                <div class="card-body d-flex justify-content-center align-items-center">
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/manage/executive">Gestionar Usuarios</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Card de Subir Archivos Planos -->
+        <div class="col-lg-6 col-md-6 col-sm-6 col-12 mb-3">
+            <div class="card shadow h-100">
+                <h4 class="card-header text-center">
+                    Cargue de Archivos Planos
+                </h4>
+                <div class="card-body d-flex justify-content-center align-items-center">
+                    <a class="btn btn-primary me-2 mb-1" routerLink="/auth/admin/upload-data">Cargar Archivos Planos</a>
                 </div>
             </div>
         </div>
