--- a/front/src/app/components/private/admin/components/manage-users/components/manage-user/manage-user.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-user/manage-user.component.html
@@ -18,7 +18,7 @@
         <button class="btn btn-success m-2" (click)="createUser()" data-bs-toggle="modal" data-bs-target="#userModal">
           Crear Usuario
         </button>
-          <p-iconField iconPosition="left" class="ml-auto">
+          <!--<p-iconField iconPosition="left" class="ml-auto">
               <p-inputIcon>
                   <i class="pi pi-search"></i>
               </p-inputIcon>
@@ -27,7 +27,7 @@
                   type="text" 
                   (input)="onFilterGlobal($event)" 
                   placeholder="Buscar palabra clave" />
-          </p-iconField>
+          </p-iconField>-->
       </div>
   </ng-template>
   <ng-template pTemplate="header">
