--- a/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
+++ b/front/src/app/components/private/admin/components/credit-requests/credit-requests.component.html
@@ -30,7 +30,7 @@
       ]"
       [tableStyle]="{ 'min-width': '75rem' }"
     >
-      <ng-template pTemplate="caption">
+      <!--<ng-template pTemplate="caption">
         <div class="flex">
           <p-iconField iconPosition="left" class="ml-auto">
             <p-inputIcon>
@@ -44,7 +44,7 @@
             />
           </p-iconField>
         </div>
-      </ng-template>
+      </ng-template>-->
       <ng-template pTemplate="header">
         <tr>
           <th style="width: 5%">No.</th>
