--- a/front/src/app/components/private/admin/components/manage-users/components/manage-executive/manage-executive.component.html
+++ b/front/src/app/components/private/admin/components/manage-users/components/manage-executive/manage-executive.component.html
@@ -34,7 +34,7 @@
         >
           Crear directivo
         </button>
-        <p-iconField iconPosition="left" class="ml-auto">
+        <!--<p-iconField iconPosition="left" class="ml-auto">
           <p-inputIcon>
             <i class="pi pi-search"></i>
           </p-inputIcon>
@@ -44,7 +44,7 @@
             (input)="onFilterGlobal($event)"
             placeholder="Buscar palabra clave"
           />
-        </p-iconField>
+        </p-iconField>-->
       </div>
     </ng-template>
     <ng-template pTemplate="header">
