--- a/front/src/app/components/private/admin/components/saving-withdrawal-request/saving-withdrawal-request.component.html
+++ b/front/src/app/components/private/admin/components/saving-withdrawal-request/saving-withdrawal-request.component.html
@@ -26,7 +26,7 @@
       ]"
       [tableStyle]="{ 'min-width': '75rem' }"
     >
-      <ng-template pTemplate="caption">
+      <!--<ng-template pTemplate="caption">
         <div class="flex">
           <p-iconField iconPosition="left" class="ml-auto">
             <p-inputIcon>
@@ -40,7 +40,7 @@
             />
           </p-iconField>
         </div>
-      </ng-template>
+      </ng-template>-->
       <ng-template pTemplate="header">
         <tr>
           <th style="width: 10%">No.</th>
